[gd_scene load_steps=19 format=2]

[ext_resource path="res://Enemies/Boss/Boss.gd" type="Script" id=1]
[ext_resource path="res://WhiteColor.shader" type="Shader" id=2]
[ext_resource path="res://Enemies/Boss/BossAnimation.tres" type="SpriteFrames" id=3]
[ext_resource path="res://World/RandomObjectGenerator.tscn" type="PackedScene" id=5]
[ext_resource path="res://Enemies/Boss/BossStates.tscn" type="PackedScene" id=6]
[ext_resource path="res://Hurtboxes and hitboxes/SoftCollision.tscn" type="PackedScene" id=7]
[ext_resource path="res://Hurtboxes and hitboxes/Hitbox.tscn" type="PackedScene" id=8]
[ext_resource path="res://Shadows/MediumShadow.png" type="Texture" id=10]
[ext_resource path="res://Enemies/KinematicEnemy.gd" type="Script" id=11]
[ext_resource path="res://Enemies/DeathEffectLauncher.gd" type="Script" id=12]
[ext_resource path="res://Hurtboxes and hitboxes/HurtSystem.tscn" type="PackedScene" id=13]

[sub_resource type="ParticlesMaterial" id=1]
lifetime_randomness = 0.2
emission_shape = 1
emission_sphere_radius = 12.78
flag_disable_z = true
gravity = Vector3( 0, -20, 0 )
angular_velocity = 182.07
angular_velocity_random = 0.2
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = -13.79
linear_accel_random = 0.15
scale = 0.5
scale_random = 0.84
color = Color( 0.121569, 0.0509804, 0.207843, 1 )

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
shader = ExtResource( 2 )
shader_param/active = true

[sub_resource type="CapsuleShape2D" id=3]
height = 7.94362

[sub_resource type="CircleShape2D" id=4]
radius = 5.03393

[sub_resource type="Animation" id=5]
resource_name = "CutScene"
length = 6.0
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 2, 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.6, 2.1, 2.8, 3, 3.1, 3.5, 3.6, 3.7, 3.9, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true, false, true, false, true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 4, 4.5, 6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.54902, 0.0745098, 0.184314, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AnimatedSprite:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1, 4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 8 ) ]
}

[sub_resource type="CircleShape2D" id=6]
radius = 6.87126

[sub_resource type="CapsuleShape2D" id=7]
radius = 11.6409
height = 6.81674

[node name="Boss" type="Node2D"]
script = ExtResource( 1 )

[node name="Particles2D" type="Particles2D" parent="."]
pause_mode = 2
position = Vector2( -0.187288, -27.1568 )
amount = 40
local_coords = false
process_material = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
self_modulate = Color( 0.909804, 0.814902, 0.836863, 1 )
material = SubResource( 2 )
frames = ExtResource( 3 )
animation = "Fly"
frame = 4
playing = true
offset = Vector2( 0, -12 )

[node name="ShadowSprite" type="Sprite" parent="."]
texture = ExtResource( 10 )

[node name="Hitbox" parent="." instance=ExtResource( 8 )]
collision_mask = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0.0807722, -18.3067 )
shape = SubResource( 3 )

[node name="SoftCollision" parent="." instance=ExtResource( 7 )]

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
shape = SubResource( 4 )

[node name="RandomObjectGenerator" parent="." instance=ExtResource( 5 )]
visible = false
position = Vector2( 0, -14 )
heart_ratio = 1.0

[node name="RandomObjectGenerator2" parent="." instance=ExtResource( 5 )]
position = Vector2( 4, -20 )
heart_ratio = 1.0

[node name="BossStates" parent="." instance=ExtResource( 6 )]
kbody_node_path = NodePath("../KinematicEnemy")
animated_sprite_node_path = NodePath("../AnimatedSprite")

[node name="CutScenePlayer" type="AnimationPlayer" parent="."]
pause_mode = 2
anims/CutScene = SubResource( 5 )

[node name="KinematicEnemy" type="KinematicBody2D" parent="."]
collision_layer = 16
script = ExtResource( 11 )
remote_path = NodePath("..")
acceleration = 0.2
max_speed = 2.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicEnemy"]
shape = SubResource( 6 )

[node name="DeathEffectLauncher" type="Node2D" parent="."]
position = Vector2( 0, -14 )
script = ExtResource( 12 )

[node name="HurtSystem" parent="." instance=ExtResource( 13 )]

[node name="Hurtbox" parent="HurtSystem" index="0"]
collision_layer = 8

[node name="CollisionShape2D" parent="HurtSystem/Hurtbox" index="0"]
position = Vector2( 0, -21.327 )
shape = SubResource( 7 )

[node name="Stats" parent="HurtSystem" index="1"]
max_health = 4

[node name="BlinkAnimationPlayer" parent="HurtSystem" index="2"]
sprite_node_path = NodePath("../../AnimatedSprite")
[connection signal="hit_wall" from="BossStates" to="." method="_on_BossStates_hit_wall"]
[connection signal="animation_finished" from="CutScenePlayer" to="." method="_on_CutScenePlayer_animation_finished"]
[connection signal="area_entered" from="HurtSystem/Hurtbox" to="KinematicEnemy" method="_on_Hurtbox_area_entered"]
[connection signal="no_health" from="HurtSystem/Stats" to="." method="_on_Stats_no_health"]
[connection signal="no_health" from="HurtSystem/Stats" to="DeathEffectLauncher" method="_on_Stats_no_health"]

[editable path="Hitbox"]

[editable path="SoftCollision"]

[editable path="HurtSystem"]

[editable path="HurtSystem/Hurtbox"]
